--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>ux_edits</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+
+    <!-- notes .. thanks to: https://highlightjs.org/ -->
  
     <style>
       body {
