--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <style>
       body {
         background: #242629;
+        font-size: 1.1em;
+        word-wrap: break-word; /* find in https://highlightjs.org/ if possible */
       }
     </style>
 
