--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>ux_edits</title>
+    <title>ux_edits_v2</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
 
@@ -15,11 +15,16 @@
         /* word-wrap: break-word; */
         /* white-space: pre-line !important; */
       }
+      
+      pre {
+        /* can code this too */
+      }
     </style>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/androidstudio.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
+
   </head>
 
   <body>
