--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
  
     <style>
       body {
+        height: 102% !important;
+        width: 100% !important;
         background: #242629;
         font-size: 1.1em;
         /* word-wrap: break-word; */
         /* white-space: pre-line !important; */
+        padding: 0px;
+        margin: 0px;
+        border:30px solid #3C4249;
+        border-radius: 6px;
       }
       
       pre {
