--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         padding: 0px;
         margin: 0px;
         border:20px solid #3C4249;
-        border-radius: 6px;
+        /* border-radius: 6px; */
       }
       
       /* white space enforces line wrap, but word-wrap essential for long strings of text warpping in tablet, mobile */
