--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
       pre code.hljs {
         /* overflow-x: hidden !important; */
       }
+
+      @media (min-width: 769px) {
+        .anchorspace {
+          margin-top: -1% !important;
+        }
+      }
+      @media (max-width: 768px) {
+        .anchorspace {
+          margin-top: -3% !important;
+        }
+      }
     </style>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/androidstudio.min.css">
@@ -209,7 +220,7 @@
         OK
         */
       </code></pre>
-      <div id="ctgy"><div>
+      <div id="ctgy" class="anchorspace"></div>
       <pre><code class="language-css">
         /*
         ----
