--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>ux_edits_v2</title>
+    <title>ux_edits_highlightjs</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
 
