--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
     <style>
       body {
-        height: 102% !important;
+        /* height: 100%; */
         /* don't use, causes horizontal scroll */
         /* width: 100% !important; */
         background: #242629;
