--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
     <style>
       body {
-        /* height: 100%; */
+        /* height: 100% !important; */
         /* don't use, causes horizontal scroll */
         /* width: 100% !important; */
         background: #242629;
@@ -58,6 +58,7 @@
   <body>
 
     <main>
+      <!-- changing language to html lightens text color a bit .. css, html, xml all work -->
       <pre><code class="language-css">
         /*
         bs5.0.2_sitemap_dark
