--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
         /* miva logic wasn't posting footer (only copyright) so pasted in footer into user interface > templates > checkout: customer information (OCST) from BSKE source code */
         
         </code></pre>
-        <div id="ocst" class="anchorspace"></div>
+        <div id="osel" class="anchorspace"></div>
         <pre><code class="language-css">
 
         /*
