--- a/index.html
+++ b/index.html
@@ -80,10 +80,8 @@
       <!-- changing language to html lightens text color a bit .. css, html, xml all work -->
       <pre><code class="language-css">
         /*
-        bs5.0.2_sitemap_dark */
-        <br />
-
-        /* (updated: may 7 9:54)
+        bs5.0.2_sitemap_dark
+        (updated: may 7 9:54)
         
         ---------------
         update in SCRUM
